<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="@dimen/mtrl_card_spacing"
            android:layout_marginRight="@dimen/mtrl_card_spacing">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher_round"
                    android:layout_margin="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/app_description"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/github"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_github_filled_24dp"
                    android:drawablePadding="32dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="16dp"
                    android:text="@string/view_on_github"
                    android:textSize="16sp" />
            </LinearLayout>
        </android.support.design.card.MaterialCardView>

        <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="@dimen/mtrl_card_spacing"
            android:layout_marginRight="@dimen/mtrl_card_spacing" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="14sp"
                    android:padding="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nombre"
                    android:text="@string/autor_name"
                    android:padding="16dp"
                    android:textSize="16sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawablePadding="32dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mail"
                    android:text="@string/send_suggestions"
                    android:padding="16dp"
                    android:textSize="16sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawablePadding="32dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/llamada"
                    android:text="Llamar"
                    android:textSize="16sp"
                    android:padding="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:drawableStart="@drawable/ic_call_black_24dp"
                    android:drawablePadding="32dp"
                    />
            </LinearLayout>
        </android.support.design.card.MaterialCardView>

        <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/special_thanks"
                    android:textSize="14sp"
                    android:fontFamily="sans-serif-medium" />

                <RelativeLayout
                    android:id="@+id/thanks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/android"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/android_icon"
                        android:layout_marginEnd="32dp"
                        android:src="@drawable/ic_android_black_24dp" />

                    <TextView
                        android:id="@+id/titulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/android"
                        android:text="@string/thanks_to"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/texto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/titulo"
                        android:layout_toEndOf="@id/android"
                        android:text="@string/thanks_because"
                        android:textSize="12sp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/facebook"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_facebook_black_24dp"
                    android:drawablePadding="32dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="16dp"
                    android:text="@string/facebook"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/web"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_web_black_24dp"
                    android:drawablePadding="32dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="16dp"
                    android:text="@string/website"
                    android:textSize="16sp" />
            </LinearLayout>
        </android.support.design.card.MaterialCardView>
    </LinearLayout>
</ScrollView>
